[workspace]
members = [
    "src/client",
    "src/drivers/linux",
    "src/drivers/macos",
    "src/drivers/windows",
    "src/server",
    "src/protocol",
    "src/common",
]

[profile.dev]
lto = true
opt-level = 'z'
codegen-units = 1
debug = true

[profile.dev.package."*"]
codegen-units = 1
opt-level = 'z'
debug = true

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
debug = true

[profile.release.package."*"]
codegen-units = 1
opt-level = 'z'
debug = false
