[package]
name = "usbvip-driver-windows"
version = "0.1.0"
edition = "2021"

[dependencies]

# This is a WIP crate, not sure on stability.
# use for USB HID driver
[target.'cfg(target_os = "windows")'.dependencies.windows-kernel-rs]
git = "https://github.com/continuity-kvm/windows-kernel-rs"
rev = "f27c008113ee6c15ce10aca08699890cd17d275b"

[dependencies.usbvip-protocol]
path = "../../protocol"

[dependencies.tokio]
version = "1.19.0"
features = ["full"]
